# structure2vec

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.pytorch  README.md  meta.yaml  pyproject.toml  setup.cfg
docs/: api.rst  conf.py  index.rst
examples/: README.md  cook_harvard_cep.py  reproduce_benchmark.py  reproduce_harvard_cep.py
src/structure2vec/: discriminative_embedding.py  graph_collate.py  graphs.py  sparse_tensor.py
tests/: orig_graphs.py  test_embeddings.py  test_graph_collate.py  test_graphs.py  test_orig_graphs.py  test_sparse_tensor.py
