[metadata]
name = structure2vec
version = 0.3.0
description = Pure PyTorch implementation of structure2vec
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >=3.6
install_requires =
    networkx >=2.4,<3
    numpy >=1.18,<2
    scipy >=1.4,<2
    torch >=1.4,<2

[options.packages.find]
where=src

[options.package_data]
# * = *.txt

[options.extras_require]
tests =
    hypothesis
    hypothesis-networkx
    pydot
    pytest
    coverage
docs =
    sphinx
    importlib_metadata; python_version < "3.8"
dev =
    pre-commit
    tox

[tool:pytest]
addopts = --strict-markers

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
known_third_party = click,hypothesis,hypothesis_networkx,ignite,networkx,numpy,pytest,rdkit,scipy,setuptools,torch

[flake8]
ignore = E,W
max-complexity = 10

[coverage:run]
branch = true
source =
    structure2vec

[coverage:paths]
source =
    src/
    .tox/*/site-packages
